<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Proton Technologies AG
  ~ This file is part of Proton Technologies AG and ProtonCore.
  ~
  ~ ProtonCore is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ProtonCore is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ProtonCore.  If not, see <https://www.gnu.org/licenses/>.
  -->
<resources>
    <!-- base common strings -->
    <string name="human_verification_help">Help</string>
    <string name="human_verification_title">Human Verification</string>
    <string name="human_verification_main_subtitle">To prevent abuse, please verify you are human using one of the following options</string>
    <string name="human_verification_enter_code_subtitle">Enter the verification code that was sent to %s.</string>
    <string name="human_verification_enter_code_subtitle_email">Enter the verification code that was sent to %s. If you don\'t find the email in your inbox, please check your spam folder.</string>
    <string name="human_verification_enter_code_subtitle_already_have_code">Enter the verification code that you already have:</string>
    <string name="human_verification_option_captcha">CAPTCHA</string>
    <string name="human_verification_option_email">Email</string>
    <string name="human_verification_option_email_subtitle">Your email will only be used for this one-time verification. If you don\'t find the email in your inbox, please check your spam folder.</string>
    <string name="human_verification_option_sms">Phone number</string>
    <string name="human_verification_option_sms_subtitle">Your phone number will only be used for this one-time verification.</string>
    <string name="human_verification_get_verification_code">Get verification code</string>
    <string name="human_verification_already_have_code">I already have a code</string>
    <string name="human_verification_request_replacement_code">Did not receive the code?</string>
    <string name="human_verification_verify">Verify</string>
    <!-- To verify the entered code - action -->
    <string name="human_verification_help_title">Do you need any help with human verification?</string>
    <string name="human_verification_code">Verification Code</string>
    <string name="human_verification_code_request_new_code_title">Request new code?</string>
    <string name="human_verification_code_request_new_code_action">Request new code</string>
    <string name="human_verification_code_request_new_code">Get a replacement code sent to %s.</string>
    <string name="email">Email</string>
    <string name="email_hint">email@example.com</string>
    <string name="sms_hint">XX XXX XX XX</string>
    <string name="verification_code_hint">XXXXXX</string>
    <!-- TODO: update correct strings below -->
    <string name="human_verification_help_manual_title">Request an invite</string>
    <string name="human_verification_help_manual">If you are having trouble creating your account, please request an invitation and we will respond within 1 business day.</string>
    <string name="human_verification_help_website_title">Visit our Help Center</string>
    <string name="human_verification_help_website">Learn more about human verification and why we ask for it.</string>
    <string name="human_verification_sending_failed">Verification code sending failed. Please try again.</string>
    <string name="human_verification_incorrect_code">Incorrect code. Please try again.</string>
    <string name="human_verification_resent_code">We have sent you another code.</string>
    <string name="human_verification_captcha_failed">CAPTCHA verification failed. Please try one more time or choose another verification option.</string>
    <string name="human_verification_calling_code_template">@string/presentation_phone_calling_code_template</string>
    <string name="human_verification_captcha_no_connectivity">No connectivity. Could not load CAPTCHA.</string>
    <string name="human_verification_action_retry">Retry</string>
    <string name="human_verification_method_loading_failed">Could not load the current verification method. If the problem persists, please try one of the other methods if they are available or check the Help screen.</string>
</resources>
