<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Proton Technologies AG
  ~ This file is part of Proton Technologies AG and ProtonCore.
  ~
  ~ ProtonCore is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ProtonCore is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ProtonCore.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/parent_padding">

        <TextView
            android:id="@+id/verificationCodeSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/human_verification_enter_code_subtitle"
            android:textColor="@color/dark_gray"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/verificationCodeEditTextLayout"
            style="@style/ProtonButton.Borderless.Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_top_margin"
            android:autofillHints="@string/input_email_for_human_verification"
            android:hint="@string/email_hint"
            android:padding="0dp"
            app:endIconDrawable="@drawable/vector_clear"
            app:endIconMode="custom"
            app:endIconTint="@color/dark_gray"
            app:hintAnimationEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verificationCodeSubtitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/verificationCodeEditText"
                style="@style/ProtonEditText.Border.Grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <android.widget.Button
            android:id="@+id/verifyButton"
            style="@style/ProtonButton.Action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_top_margin"
            android:text="@string/human_verification_verify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verificationCodeEditTextLayout" />


        <android.widget.Button
            android:id="@+id/requestReplacementButton"
            style="@style/ProtonButton.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_top_margin"
            android:text="@string/human_verification_request_replacement_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verifyButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
