<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Proton Technologies AG
  ~ This file is part of Proton Technologies AG and ProtonCore.
  ~
  ~ ProtonCore is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ProtonCore is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ProtonCore.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:windowBackground"
        android:orientation="vertical">

        <include
            android:id="@+id/headerNavigation"
            layout="@layout/content_human_verification_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_view_vertical_space" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/parent_padding">

            <TextView
                android:id="@+id/title"
                style="@style/ProtonTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_top_margin"
                android:text="@string/human_verification_enter_code_subtitle"
                android:textColor="@color/dark_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/header"
                style="@style/ProtonTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_top_margin"
                android:text="@string/human_verification_code"
                android:textAllCaps="true"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <RelativeLayout
                android:id="@+id/verificationCodeEditTextLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_top_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/verificationCodeEditText"
                    style="@style/ProtonEditText.Border"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="start|center_vertical"
                    android:gravity="start|center_vertical"
                    android:hint="@string/verification_code_hint"
                    android:inputType="text" />

                <ToggleButton
                    android:id="@+id/emailClearButton"
                    android:layout_width="@dimen/edit_text_action_button"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:button="@drawable/ic_filled_times_circle"
                    android:textOff=""
                    android:textOn=""
                    android:textSize="0sp" />
            </RelativeLayout>

            <FrameLayout
                android:id="@+id/verifyButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_top_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/verificationCodeEditTextLayout">

                <android.widget.Button
                    android:id="@+id/verifyButton"
                    style="@style/ProtonButton.Action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/human_verification_verify" />

                <!-- this is a temporary solution, we should make it custom view later -->
                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical|end"
                    android:elevation="3dp"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone" />
            </FrameLayout>

            <android.widget.Button
                android:id="@+id/requestReplacementButton"
                style="@style/ProtonButton.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_top_margin"
                android:text="@string/human_verification_request_replacement_code"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/verifyButtonLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>
